2025-09-14T01:59:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17704922973 # 1526
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-14
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3739 / 0 3740 / +0 +1

2025-09-13T01:46:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17690018251 # 1524
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-13
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3738 / 0 3739 / +0 +1

2025-09-12T12:49:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17674937687 # 1523
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-12
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3736 / 0 3738 / +0 +2

2025-09-11T12:49:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17645057549 # 1521
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-11
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3734 / 0 3736 / +0 +2

2025-09-10T12:50:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17614304333 # 1519
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-10
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3730 / 0 3734 / +0 +4

2025-09-07T02:00:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17522379716 # 1512