@@ -1,3 +1,9 @@
+2025-09-14T12:43:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17711334749 # 1527
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-14
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3740 / 0 3742 / +0 +2
+
 2025-09-14T01:59:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17704922973 # 1526
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-09-14
